src/components/BurgerBar/BurgerBar.module.css
.burgerBar {
    display: block;
    position: relative;
    width: 100%;
    background: #333;
    height: 50px;
}

.mobileLogo {
    z-index: 50;
    top: 10px;
    left: 15px;
    height: 49px;
}

.mobileLogo img {
    width: 250px;
    object-fit: cover;
}

.closeIcon {
    background: url('../../resources/ham-close.png');
}

.openIcon {
    background: url('../../resources/ham-open.png');
}

.displayNone {
    display: none;
}

.displayBlock {
    display: block
}

.hamburger {
    z-index: 50;
    width:50px;
    top: 10px;
    right: 15px;
    height: 50px;
}

.hamburger, .mobileLogo {
    position: absolute;
    background-size: cover;  
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.404);
} 

.grayScreen {
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.25);
    z-index: 10;
    color: green;
    overflow: auto;
    padding-top: 20%;
    box-sizing: border-box;
    z-index: 1;
    backdrop-filter: blur(3px);
} 

.menuItems {
    /* width: 200px; */
    height: 300px;
    background: #333;
    display: flex;
    flex-direction: column;
}

.grayButton, .darker {
    font-family: "monospace", sans-serif;
    color: rgb(236, 236, 236);
    background: #333;
    border: none;
    padding: 0 25px;
    text-transform: uppercase;
    font-weight: bold;
    outline: none;
    height: 45px;
    font-size: 1.25rem;
    border-bottom: 1px white solid;
  }

  .cart {
    margin: 10px auto;
    width: 30px;
    height: 50px;
    background: url(../../resources/shopping_cart.svg);
    background-size: contain;
    background-repeat: no-repeat;
  }
  
  .darker{
   background: #222;
  }
  
  .grayButton:hover, .darker:hover {
    color:#FF624D;
  }



@media only screen and (min-width: 700px) {
    .burgerBar, .mobileLogo {
        display: none;
    }

    .grayScreen {
        display: none;
    }
}

@media only screen and (min-width: 1000px) {

}

